[gd_scene load_steps=2 format=3 uid="uid://cp2rlrqracaje"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_lohpg"]

[node name="mainMenu" type="Control" node_paths=PackedStringArray("continueButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 600.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_lohpg")
continueButton = NodePath("cont")

[node name="cont" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.45
focus_mode = 0
text = "continue"

[node name="new" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.475
anchor_right = 0.7
anchor_bottom = 0.525
focus_mode = 0
text = "new"

[node name="tut" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.55
anchor_right = 0.7
anchor_bottom = 0.6
focus_mode = 0
text = "tutorial"

[node name="opt" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.625
anchor_right = 0.7
anchor_bottom = 0.675
focus_mode = 0
text = "options"

[node name="quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 0.75
focus_mode = 0
text = "quit
"

[connection signal="pressed" from="cont" to="." method="continue_game_pressed"]
[connection signal="pressed" from="new" to="." method="new_game_button_pressed"]
[connection signal="button_up" from="tut" to="." method="tutorial_button_pressed"]
[connection signal="pressed" from="opt" to="." method="options_button_pressed"]
